# simple_tetris

./: .gitignore  README.md  pyproject.toml  tetris.py
